--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,24 +1,23 @@
-name: CI
+name: Python package
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push, pull_request]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-      - name: Install dependencies
-        run: |
-          pip install -e .
-          pip install pytest pytest-cov
-      - name: Run tests with coverage
-        run: |
-          pytest --cov=src/quant_greeks_cli
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run tests
+      run: pytest --cov=src/quant_greeks_cli
